--- a/.github/workflows/zad2_workflow.yml
+++ b/.github/workflows/zad2_workflow.yml
@@ -33,5 +33,5 @@ jobs:
           file: ./Dockerfile
           push: true
           tags: |
-            ghcr.io/${{ github.repository_owner }}/zad2:x86_64
-            ghcr.io/${{ github.repository_owner }}/zad2:arm64
+            ghcr.io/${{ github.repository_owner }}/zadanie2:x86_64
+            ghcr.io/${{ github.repository_owner }}/zadanie2:arm64
